Fixed feed header shift on scrolling.

--- a/src/ui/feed/FeedPageHeader.css
+++ b/src/ui/feed/FeedPageHeader.css
@@ -1,9 +1,9 @@
 #feed-header {
     position: sticky;
-    top: 2.5rem;
+    top: 2.7rem;
     display: flex;
     background-color: var(--body-background);
-    padding-top: 0.3rem;
+    padding-top: 0.5rem;
     border-bottom: var(--gray-light) 1px solid;
     z-index: 1010;
 }
